Fixed botlist overflow and scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,8 @@ nav{
 .bot-list{
   background: url("./assets/img/circuits.png") no-repeat center;
   height: 87vh;
+  scrollbar-width: thin;
+  scrollbar-color: #0594d0 #ffff;
 }
 
 .border-end{
